{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 3726,
  "lineage": "9f3599f6-0d3c-21ae-594c-1aa41198fcb6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:loadbalancer/app/alb-Akin/ea67779fdf479038",
            "arn_suffix": "app/alb-Akin/ea67779fdf479038",
            "dns_name": "alb-Akin-1668273483.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:632199730033:loadbalancer/app/alb-Akin/ea67779fdf479038",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-Akin",
            "security_groups": [
              "sg-01d2d11d42e030f3c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00635c58381d7de93"
              },
              {
                "subnet_id": "subnet-0a940874ff2a3c91d"
              }
            ],
            "subnets": [
              "subnet-00635c58381d7de93",
              "subnet-0a940874ff2a3c91d"
            ],
            "tags": {
              "Name": "alb2"
            },
            "vpc_id": "vpc-0e55e27321db61b09",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "depends_on": [
            "aws_security_group.security",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:listener/app/alb-Akin/ea67779fdf479038/49597fdb7471a9c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:targetgroup/alb-target-group-2/08e3aeb6b2c1fdf0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:632199730033:listener/app/alb-Akin/ea67779fdf479038/49597fdb7471a9c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:loadbalancer/app/alb-Akin/ea67779fdf479038",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.alb",
            "aws_alb_target_group.alb_target_group_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:targetgroup/alb-target-group-2/08e3aeb6b2c1fdf0",
            "arn_suffix": "targetgroup/alb-target-group-2/08e3aeb6b2c1fdf0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:632199730033:targetgroup/alb-target-group-2/08e3aeb6b2c1fdf0",
            "lambda_multi_value_headers_enabled": false,
            "name": "alb-target-group-2",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "alb_target_group2"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-057f61da4ac58f1bf",
            "public_dns": "ec2-54-244-202-221.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.202.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05b5c485bb4aedcac",
            "public_dns": "ec2-54-148-172-100.us-west-2.compute.amazonaws.com",
            "public_ip": "54.148.172.100",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default_gat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0eeaa4a292530c196",
            "owner_id": "632199730033",
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_table_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d88073bc31bb51c8",
            "original_route_table_id": "rtb-0d268a8cbf369445f",
            "route_table_id": "rtb-0d93c0459393f0dba",
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_route_table.route-public",
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1gate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057f61da4ac58f1bf",
            "id": "nat-0a468dd992209bb03",
            "network_interface_id": "eni-0506d58d220208aad",
            "private_ip": "10.0.31.234",
            "public_ip": "54.244.202.221",
            "subnet_id": "subnet-00635c58381d7de93"
          },
          "depends_on": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2gate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b5c485bb4aedcac",
            "id": "nat-026b4affcd8b44a88",
            "network_interface_id": "eni-05bfb21b550c7d945",
            "private_ip": "10.0.56.23",
            "public_ip": "54.148.172.100",
            "subnet_id": "subnet-0a940874ff2a3c91d"
          },
          "depends_on": [
            "aws_eip.nat_eip2",
            "aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f0883a44d00cba3d",
            "owner_id": "632199730033",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a468dd992209bb03",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet 1 Routing Table"
            },
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_nat_gateway.nat_1gate",
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0194631e92f4431d2",
            "owner_id": "632199730033",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a468dd992209bb03",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet 2 Routing Table"
            },
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_nat_gateway.nat_1gate",
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d93c0459393f0dba",
            "owner_id": "632199730033",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eeaa4a292530c196",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc Routing Table"
            },
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_internet_gateway.default_gat",
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_table_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047759f1a01775be2",
            "route_table_id": "rtb-0f0883a44d00cba3d",
            "subnet_id": "subnet-00020deb3ba64f304"
          },
          "depends_on": [
            "aws_route_table.route-private1",
            "aws_subnet.private_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_table_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008324210d02bf1c5",
            "route_table_id": "rtb-0194631e92f4431d2",
            "subnet_id": "subnet-005ada01f4efdc602"
          },
          "depends_on": [
            "aws_route_table.route-private2",
            "aws_subnet.private_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnesecurity",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:security-group/sg-000cae684cc35b584",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000cae684cc35b584",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20190716220143523600000002",
            "name_prefix": null,
            "owner_id": "632199730033",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:security-group/sg-01d2d11d42e030f3c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d2d11d42e030f3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20190716220143517100000001",
            "name_prefix": null,
            "owner_id": "632199730033",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:subnet/subnet-00020deb3ba64f304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-00020deb3ba64f304",
            "map_public_ip_on_launch": false,
            "owner_id": "632199730033",
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:subnet/subnet-005ada01f4efdc602",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-005ada01f4efdc602",
            "map_public_ip_on_launch": false,
            "owner_id": "632199730033",
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:subnet/subnet-00635c58381d7de93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-00635c58381d7de93",
            "map_public_ip_on_launch": true,
            "owner_id": "632199730033",
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:subnet/subnet-0a940874ff2a3c91d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-0a940874ff2a3c91d",
            "map_public_ip_on_launch": true,
            "owner_id": "632199730033",
            "vpc_id": "vpc-0e55e27321db61b09"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_environment",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:vpc/vpc-0e55e27321db61b09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e76224d134fc15be",
            "default_route_table_id": "rtb-0d268a8cbf369445f",
            "default_security_group_id": "sg-0f671bf7b215da5c1",
            "dhcp_options_id": "dopt-03f04744a173bd99c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e55e27321db61b09",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d268a8cbf369445f",
            "owner_id": "632199730033"
          }
        }
      ]
    }
  ]
}